# mtp-target-forever

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  mtp-target.nsh
.github/workflows/: build.yml  release.yml
CMakeModules/: FindNeL.cmake  FindSSLEAY.cmake
client/: CMakeLists.txt  mtp-target-forever.desktop  mtp-target.cfg.in  mtp_target_default.cfg
client/data/gui/: menu.xml  options.xml  pause_menu.xml
client/src/: 3d_task.cpp  3d_task.h  CMakeLists.txt  background_task.cpp  chat_task.cpp  chat_task.h  config_file_task.cpp  controler.cpp  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  external_camera_task.cpp  external_camera_task.h  font_manager.cpp  font_manager.h  gate.cpp  gate.h  gate_lua_proxy.cpp  gate_lua_proxy.h  graph.cpp  graph.h  gui_button.cpp  gui_button.h  gui_custom.cpp  gui_custom.h  gui_mouse_listener.cpp  gui_mouse_listener.h  gui_text.cpp  gui_text.h  gui_xml.cpp  hud_task.cpp  hud_task.h  interpolator.cpp  intro_task.cpp  intro_task.h  level.cpp  level.h  level_manager.cpp  main.cpp  (+22 more)
common/: lua_nel.cpp  lua_nel.h  lua_utility.cpp  lunar.h  net_message.h
data/config/: mtp_target_default.cfg
data/level/: level_arena.lua  level_bowls1.lua  level_city_darts.lua  level_city_destroy.lua  level_city_easy.lua  level_city_paint.lua  level_city_precision.lua  level_city_test.lua  (+40 more)
docs/: BUILDING.md  CHANGELOG.md  CHAT.md  CONTROLS.md  CURRENT_FOCUS.md  KNOWN_ISSUES.md  LEVELS.md  MODIFICATIONS.md  PROTOCOL_NOTES.md  RUNTIME_FIXES.md  SCORING_INVESTIGATION.md  TROUBLESHOOTING.md
login-service-deno/: README.md  db-setup.ts  deno.json  http-only.ts  login-only.ts  mtp_target.db  nel-protocol-v2.ts
login_service/: CMakeLists.txt  connection_client.cpp  connection_ws.cpp
scripts/: assets-manifest.json  assets-manifest.ps1  build-all.bat  build-client.bat  build-server.bat  clear-client-cache.bat  cmake-config.ps1  deps-manifest.ps1  post-build.bat  post-build.ps1  run-client.bat  run-server.bat  set-playlist.ps1  setup-deps.bat  setup-deps.ps1  setup-ryzomcore.ps1
server/: mtp_target_service_default.cfg
(+89 files in other folders)
