ADD_SUBDIRECTORY(src)

CONFIGURE_FILE(mtp-target.cfg.in mtp-target.cfg)

IF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" VERSION_GREATER 2.6)
	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/mtp-target.cfg DESTINATION etc/mtp-target-forever)
ELSE("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" VERSION_GREATER 2.6)
	INSTALL(FILES ${CMAKE_BINARY_DIR}/mtp-target.cfg DESTINATION etc/mtp-target-forever)
ENDIF("${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" VERSION_GREATER 2.6)

INSTALL(DIRECTORY data/
	DESTINATION share/games/mtp-target-forever
	COMPONENT mtptargetdata
	PATTERN "CVS" EXCLUDE
	PATTERN ".svn" EXCLUDE
	PATTERN "Makefile*" EXCLUDE)

IF(UNIX)
    INSTALL(FILES mtp-target-forever.png DESTINATION share/icons/hicolor/32x32/)
    INSTALL(FILES mtp-target-forever.desktop DESTINATION share/applications/)
ENDIF(UNIX)
